# palm-chat

./: .gitignore  Dockerfile  Makefile  README.md  common.py  deploy.sh  main.py  pyproject.toml  storategy.py
routers/: chat.py
scripts/: deploy.sh
